# feather

./: .gitignore  CMakeLists.txt  README.md  run-server.sh  run-tests.sh
__notes/: TODO
include/feather/: feather.h  int-domain.h  types.h  utils.h
include/feather/common/: problem-manager.h
include/feather/frontend/cpp/: expressions.h  goal-expr.h  int-deque.h  int-var-array.h  int-var.h  solver.h  types.h
include/feather/management/: buffer-manager.h  build-env-manager.h  manager-generator.h  socket-client.h  socket-server.h  thread-manager.h
scripts/: constraints.icc  deserialize-constr.py  generate-constraint-definitions.py  generate-constraint-glue.py
server/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/backend/naxos/: NsDataStructures.h  NsGoal.h  NsIntVar.cpp  NsIntVar.h  NsIntVarArray.h  Ns_Constraint.cpp  Ns_Constraint.h  array-constraints.cpp  basics.h  constraint-glue.icc  internal.h  naxos.cpp  naxos.h  var-constraints.cpp
src/base/: bitset.cpp  bitset.h  int-domain.cpp  int-ranges.cpp  int-ranges.h  utils.h
src/common/: constr-serializer.icc  constraints.h  constraints.icc  create-constraint.cpp  create-constraint.h  goals.h  representation.cpp  representation.h  serializer.cpp  serializer.h  util.h
src/frontend/cpp/: expressions.cpp  goal-expr.cpp  int-deque.cpp  int-var-array.cpp  int-var.cpp  solver.cpp
src/management/: buffer-manager.cpp  build-env-manager.cpp  manager-generator.cpp  socket-client.cpp  socket-server.cpp  thread-manager.cpp
tests/: CMakeLists.txt  Temp.cpp  serialization.cpp
tests/base/: int-domain.cpp  int-ranges.cpp
tests/examples/: autocorrelation.cpp  golomb.cpp  hcvrp.cpp  hcvrpNikos.cpp  nqueens.cpp
tests/examples/data/: hcvrp_data.pl
tests/frontend/cpp/: expressions.cpp  solver.cpp
tests/management/: thread-manager.cpp
